# OOP-Labs

./: README.md
Task1/: .gitignore  CMakeLists.txt  main.cpp  readme.md
Task1/include/: checker.h
Task1/src/: checker.cpp
Task1/test/: test01.cpp
Task1/tmp/: main  run_tests
